@@ -128,6 +128,26 @@
          </widget>
         </item>
         <item>
+         <spacer name="horizontalSpacer_4">
+          <property name="orientation">
+           <enum>Qt::Orientation::Horizontal</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>40</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+        <item>
+         <widget class="QPushButton" name="pushButton_5">
+          <property name="text">
+           <string>&amp;Lupdate</string>
+          </property>
+         </widget>
+        </item>
+        <item>
          <spacer name="horizontalSpacer">
           <property name="orientation">
            <enum>Qt::Orientation::Horizontal</enum>
@@ -252,6 +272,14 @@
    </property>
   </action>
  </widget>
+ <tabstops>
+  <tabstop>project_files_widget</tabstop>
+  <tabstop>files_widget</tabstop>
+  <tabstop>pushButton</tabstop>
+  <tabstop>pushButton_2</tabstop>
+  <tabstop>pushButton_3</tabstop>
+  <tabstop>pushButton_4</tabstop>
+ </tabstops>
  <resources/>
  <connections>
   <connection>
@@ -357,8 +385,8 @@
    <slot>build()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>243</x>
-     <y>556</y>
+     <x>220</x>
+     <y>567</y>
     </hint>
     <hint type="destinationlabel">
      <x>104</x>
@@ -373,8 +401,8 @@
    <slot>clean()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>560</x>
-     <y>555</y>
+     <x>653</x>
+     <y>567</y>
     </hint>
     <hint type="destinationlabel">
      <x>703</x>
@@ -414,6 +442,22 @@
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>pushButton_5</sender>
+   <signal>clicked()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>lupdate()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>406</x>
+     <y>557</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>492</x>
+     <y>555</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
   <slot>about()</slot>
@@ -425,5 +469,6 @@
   <slot>add()</slot>
   <slot>remove()</slot>
   <slot>save()</slot>
+  <slot>lupdate()</slot>
  </slots>
 </ui>
