@@ -1,4 +1,5 @@
 0.5.5: Fix a stupid error on non Windows systems
+        Add the lupdate command to the GUI.
 
 0.5.4: Add error messages
 
